# 310-L7-Soft-Displaying-Titanic-Datasets-Starter

./: main.py  pyproject.toml  requirements.txt
